[tool.poetry]
name = "repl_python3_gpt-principles"
version = "0.1.0"
description = ""
authors = ["samrawal <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
